[project]
name = "bub-contrib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bub",
    "bub-codex",
    "bub-kapy",
    "bub-discord",
    "bub-schedule",
    "bub-tg-feed",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
bub = { git = "https://github.com/bubbuild/bub.git" }
bub-tg-feed = { workspace = true }
bub-codex = { workspace = true }
bub-kapy = { workspace = true }
bub-discord = { workspace = true }
bub-schedule = { workspace = true }
